k8s-GitOps/microservices/config-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server
  namespace: default
  labels:
    app: config-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-server
  template:
    metadata:
      labels:
        app: config-server
    spec:
      containers:
        - name: config-server
          image: varshil1110/java-microservice-config-server:89192df1f41cb52c5fd16759c8eef2b8ffcde8d0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8888
              name: http
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8888
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8888
            initialDelaySeconds: 30
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: config-server
  namespace: default
spec:
  ports:
    - port: 8888
      targetPort: 8888
  selector:
    app: config-server
