k8s-GitOps/microservices/gateway-service-deployment.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: gateway-service
#   namespace: default
#   labels:
#     app: gateway-service
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: gateway-service
#   template:
#     metadata:
#       labels:
#         app: gateway-service
#     spec:
#       containers:
#         - name: gateway-service
#           image: varshil1110/java-microservice-gateway:2e5535f4f92878db30114e45cb58e6bbc90b080e
#           imagePullPolicy: IfNotPresent
#           ports:
#             - containerPort: 8222
#               name: http
#           resources:
#             limits:
#               cpu: "500m"
#               memory: "512Mi"
#             requests:
#               cpu: "250m"
#               memory: "256Mi"
#           env:
#             - name: CONFIG_SERVER_URL
#               valueFrom:
#                 configMapKeyRef:
#                   name: microservices-config
#                   key: CONFIG_SERVER_URL
#             - name: EUREKA_SERVER_URL
#               valueFrom:
#                 configMapKeyRef:
#                   name: microservices-config
#                   key: EUREKA_SERVER_URL
#             - name: EUREKA_HOSTNAME
#               valueFrom:
#                 configMapKeyRef:
#                   name: microservices-config
#                   key: EUREKA_HOSTNAME
#             - name: MANAGEMENT_ENDPOINT_HEALTH_PROBES_ENABLED
#               value: "true"
#             - name: MANAGEMENT_HEALTH_LIVENESSSTATE_ENABLED
#               value: "true"
#             - name: MANAGEMENT_HEALTH_READINESSSTATE_ENABLED
#               value: "true"
#           startupProbe:
#             httpGet:
#               path: /actuator/health
#               port: 8222
#             failureThreshold: 30
#             periodSeconds: 10
#           readinessProbe:
#             httpGet:
#               path: /actuator/health/readiness
#               port: 8222
#             initialDelaySeconds: 55
#             periodSeconds: 10
#           livenessProbe:
#             httpGet:
#               path: /actuator/health/liveness
#               port: 8222
#             initialDelaySeconds: 75
#             periodSeconds: 20
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: gateway-service
#   namespace: default
# spec:
#   ports:
#     - port: 8222
#       targetPort: 8222
#   selector:
#     app: gateway-service


apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service
  namespace: default
  labels:
    app: gateway-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-service
  template:
    metadata:
      labels:
        app: gateway-service
    spec:
      containers:
        - name: gateway-service
          image: varshil1110/java-microservice-gateway:2e5535f4f92878db30114e45cb58e6bbc90b080e
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8222
              name: http
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "250m"
              memory: "256Mi"
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8222
            initialDelaySeconds: 40
            periodSeconds: 10
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8222
            initialDelaySeconds: 70
            periodSeconds: 20
            failureThreshold: 5
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: default
spec:
  ports:
    - port: 8222
      targetPort: 8222
  selector:
    app: gateway-service
