k8s-GitOps/microservices/payment-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  namespace: default
  labels:
    app: payment-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      containers:
        - name: payment-service
          image: varshil1110/java-microservice-payment:66c425946e001063ddee62f140bd8e238b0f2102
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8060
              name: http
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "250m"
              memory: "256Mi"
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8060
            initialDelaySeconds: 60
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8060
            initialDelaySeconds: 80
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: default
spec:
  ports:
    - port: 8060
      targetPort: 8060
  selector:
    app: payment-service
