k8s-GitOps/microservices/product-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  namespace: default
  labels:
    app: product-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
        - name: product-service
          image: varshil1110/java-microservice-product:89192df1f41cb52c5fd16759c8eef2b8ffcde8d0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8050
              name: http
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8050
            initialDelaySeconds: 35
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8050
            initialDelaySeconds: 45
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: default
spec:
  ports:
    - port: 8050
      targetPort: 8050
  selector:
    app: product-service
